--- a/app/globals.scss
+++ b/app/globals.scss
@@ -5,5 +5,9 @@
 body {
     max-width: 1440px;
     padding: 20px 80px 20px 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
