--- a/app/globals.scss
+++ b/app/globals.scss
@@ -3,11 +3,9 @@
 @tailwind utilities;
 
 body {
-    max-width: 1440px;
-    padding: 20px 80px 20px 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    max-width: 1280px; 
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 20px;
 }
 
